Fixed mobileview overflow and completed overflow task.

--- a/index.css
+++ b/index.css
@@ -13,6 +13,9 @@
 html {
     scroll-behavior: smooth;
     font-family: "Roboto", serif;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+
+
 
 }
 
@@ -27,8 +30,9 @@ body {
     width: 100%;
     color: #e0e0e0; 
     background-color: #1e1e1e;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
     line-height: 1.3; /* Improves readability by adding line spacing */
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+
 
 }
 
